# jc-tool-c

./: .gitignore  CMakeLists.txt  README.md  build.bat  client.cpp  server.cpp
.github/workflows/: build-ffmpeg.yml  build.yml  easytier.yml
app/: client_application.cpp  client_application.h  main.cpp  server_application.cpp  server_application.h
client/: CMakeLists.txt  audio_decoder.cpp  audio_decoder.h  audio_player.cpp  audio_player.h  connection_dialog.cpp  connection_dialog.h  control_panel.cpp  control_panel.h  desktop_window.cpp  desktop_window.h  display_buffer.cpp  display_buffer.h  file_window.cpp  file_window.h  hevc_decoder.cpp  hevc_decoder.h  main.cpp  media_decoder.cpp  media_decoder.h  server_settings_dialog.cpp  server_settings_dialog.h  server_status_dialog.cpp  server_status_dialog.h  service_manager_dialog.cpp  service_manager_dialog.h  sftp_window.cpp  sftp_window.h  ssh_terminal.cpp  ssh_terminal.h  terminal_widget.cpp  terminal_widget.h
common/: easytier_control.cpp  easytier_control.h  easytier_manager.cpp  multi_transport.h  protocol.h  ssh_session.cpp  ssh_session.h  transport.h  transport_p2p.cpp  transport_p2p.h  transport_tcp.cpp  transport_tcp.h
server/: CMakeLists.txt  audio_capture.cpp  audio_capture.h  audio_encoder.cpp  audio_encoder.h  desktop_service.cpp  desktop_service.h  file_service.cpp  file_service.h  hevc_encoder.cpp  hevc_encoder.h  main.cpp  media_encoder.cpp  media_encoder.h  screen_capture.cpp  screen_capture.h  ssh_server.cpp
service/: easytier_manager_old.h  easytier_service.cpp  easytier_service.h  logging.cpp  logging.h  service_main.cpp  ssh_server.cpp  ssh_server.h
